# mcp-agent-backend

./: .env.sample  .gitignore  debug_redis_stream.py  docker-compose.yml  simple_websocket_test.py  test_websocket.py  test_websocket_progress.py  test_websocket_simple.py
app/: Dockerfile  infrastructure.py  main.py  prestart.sh  pyproject.toml  requirements.txt
app/agents/chat_agent/: chat_agent.py  chat_prompts.py
app/agents/router_agent/: router_agent.py  router_prompts.py
app/agents/streaming_agent/: streaming_agent.py
app/agents/summary_agent/: summary_agent.py  summary_prompts.py
app/agents/tool_orchestration_agent/: tool_orchestration_agent.py  tool_orchestration_prompts.py
app/agents/tool_refinement_agent/: tool_refinement_agent.py  tool_refinement_prompts.py
app/apis/: main_router.py
app/apis/chat/: router.py
app/apis/configs/: router.py
app/apis/tool_summary/: router.py
app/caches/: conversation_store.py  tool_summaries_cache.py
app/config/: vector_store_config.py
app/configs/: app_config.py
app/graph/: tool_orchestration_graph.py
app/managers/: ConnectionManager.py
app/models/: chat_history.py  mcp_config.py
app/repositories/: config_repository.py
app/repository/: chat_history_repository.py
app/schemas/: router_decision.py  tool_invocation.py  tool_result.py  tool_summaries.py  tool_summary_request.py
app/services/: agent_invocation_service.py  chat_history_service.py  config_service.py  mcp_service.py  tool_summaries_service.py
app/util/: websocket_helpers.py
app/utils/: chat_util.py  websocket_util.py
auth/: Dockerfile  main.py  prestart.sh  pyproject.toml  requirements.txt
auth/apis/: main_api_router.py
auth/apis/auth/: router.py
auth/configs/: auth_settings.py
auth/dependencies/: auth_dependencies.py
auth/exceptions/: user_exceptions.py
auth/repositories/: auth_repository.py
auth/schemas/: token.py  user.py
auth/services/: auth_service.py  token_service.py
common/: mongo_infrastructure.py  (+1 more)
mcp_server/: Dockerfile  prestart.sh  pyproject.toml
mcp_server/server/: main.py
mcp_server/server/agents/: calculation_validator_agent.py  calculator_agent.py  research_agent.py  search_agent.py
mcp_server/server/graph/: calculator_graph.py
mcp_server/server/schemas/: calculation_result.py  calculator_state.py  finance_result.py  research_response.py  search_result.py
mcp_server/server/tools/: calculation_tool.py  search_tool.py  wiki_tool.py
mcp_server/server/tools/finance/: tool.py
worker/: Dockerfile  config.py  prestart.sh  pyproject.toml  tasks.py
(+6 files in other folders)
