[tool.poetry]
name = "mcp-agent-backend-app"
version = "0.1.0"
description = "Appliation Backend Logic"
authors = ["jadames <juan.adames@giantmachines.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-core = "^0.3.74"
langchain-openai = "^0.3.30"
fastapi = "^0.116.1"
langchain-mcp-adapters = "^0.1.9"
pymongo = "^4.14.1"
langchain = "^0.3.27"
langgraph = "^0.6.6"
redis = "^6.4.0"
websockets = "^12.0"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
celery = "^5.5.3"
pyjwt = "^2.10.1"
passlib = "^1.7.4"
bcrypt = "^4.1.2"
pytz = "^2025.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
